--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -31,7 +31,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-date?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-date?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "next hearing date"
                                 }
@@ -48,7 +48,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-type?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-type?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "next hearing type"
                                 }
@@ -65,7 +65,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "/person/" + nomsId + "/court-cases/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-court-select?submitToCheckAnswers=true",
+                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" +courtCaseReference + "/appearance/" + appearanceReference + "/next-hearing-court-select?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "next hearing location"
                                 }
@@ -78,7 +78,7 @@
             <h2 class="govuk-heading-m">Now save this court case</h2>
             <p class="govuk-body">By saving this court case, you are confirming that the details you are providing match the details on the warrant.</p>
 
-            <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-check-next-hearing-answers">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/submit-check-next-hearing-answers">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {{ govukButton({
                     text: "Save and continue"
