updated missed page

--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -69,7 +69,7 @@
                 {{
                     offenceCard({
                         offenceCode: offence.offenceCode,
-                        offenceName: offence.offenceName,
+                        offenceName: offenceMap[offence.offenceCode],
                         offenceStartDate: offence.offenceStartDate,
                         offenceEndDate: offence.offenceEndDate,
                         outcome: offence.outcome,
