--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -19,7 +19,7 @@
                 {{
                     offenceCard({
                         offenceCode: offence.offenceCode,
-                        offenceName: offence.offenceName,
+                        offenceName: offenceMap[offence.offenceCode],
                         offenceStartDate: offence.offenceStartDate,
                         offenceEndDate: offence.offenceEndDate,
                         outcome: offence.outcome
