--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -1,14 +1,7 @@
 {% extends "govuk/template.njk" %}
 
 {% block head %}
-  <!--[if !IE 8]><!-->
   <link href="/assets/stylesheets/application.css?{{ version }}" rel="stylesheet"/>
-  <!--<![endif]-->
-
-  <!--[if lt IE 9]>
-  <link href="/assets/stylesheets/application-ie8.css?{{ version }}" rel="stylesheet"/>
-  <script src="/assets/js/html5shiv-3.7.3.min.js"></script>
-  <![endif]-->
 
   <script src="/assets/js/jquery.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
@@ -55,8 +48,8 @@
   {# Run JavaScript at end of the
   <body>, to avoid blocking the initial render. #}
   
-  <script src="/assets/govuk/all.js"></script>
-  <script src="/assets/govukFrontendInit.js"></script>
+  <script src="/assets/govuk/all.bundle.js" type="module"></script>
+  <script src="/assets/govukFrontendInit.js" type="module"></script>
   <script src="/assets/moj/all.js"></script>
   {% if feComponents.jsIncludes %}
       {% for js in feComponents.jsIncludes %}
