--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -12,59 +12,54 @@
     <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds">
-            {% for courtCase in courtCases.content %}
+            
+            {% for courtCaseDetails in courtCaseDetailModels %}
 
-                {%- set appearanceTableRows = [] -%}
+                {% set courtCaseSummary %}
 
-                {%- for appearance in courtCase.appearances -%}
-                    {%- set tableRow= [
-                        {
-                        text: appearance.courtCaseReference
-                        },
-                        {
-                        text: appearance.courtCode
-                        },
-                        {
-                        text: appearance.appearanceDate | formatDate
-                        },
-                        {
-                        text: appearance.outcome
-                        }
-                    ]-%}
-                    {% set appearanceTableRows = (appearanceTableRows.push(tableRow), appearanceTableRows)%}
-                {%- endfor -%}
+                    {% set nextHearingHtml %}
+                        <ul class="govuk-list">
+                            {% for nextHearingValue in courtCaseDetails.nextHearing %}
+                                <li> {{ nextHearingValue }} </li>
+                            {% endfor %}
+                        </ul>
+                    {% endset %}
+                    {{
+                        govukSummaryList({
+                            rows: [
+                            {
+                                key: { text: "Case references"},
+                                value: { text: courtCaseDetails.caseReferences }
+                            },
+                            {
+                                key: { text: "Overall case outcome"},
+                                value: { text: courtCaseDetails.overallCaseOutcome }
+                            },
+                            {
+                                key: { text: "Next hearing"},
+                                value: { html: nextHearingHtml }
+                            }
+                            ],
+                            attributes: {
+                                "data-qa": "courtCaseSummary-" + courtCaseDetails.courtCaseUuid
+                            }
+                        })
+                    }}
 
-                {% set appearanceTableHtml %}
-                    {{ govukTable({
-                    firstCellIsHeader: true,
-                    head: [
-                        {
-                        text: "Case reference"
-                        },
-                        {
-                        text: "Location"
-                        },
-                        {
-                        text: "Warrant date"
-                        },
-                        {
-                        text: "Outcome"
-                        }
-                    ],
-                    rows: appearanceTableRows
-                    }) }}
+                    <hr class="govuk-section-break govuk-section-break--visible">
+
                 {% endset %}
-                
+
                 {{
                     govukSummaryList({
                         card: {
                             title: {
-                                text: "Court Case " + courtCase.courtCaseUuid
+                                text: "Court Case " + courtCaseDetails.courtCaseUuid
                             },
                             actions: {
                                 items: [
                                 {
-                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCase.courtCaseUuid + "/appearance/"+ courtCase.appearances | length + "/select-reference",
+                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid + "/appearance/"+ courtCaseDetails.appearanceTotal + "/select-reference",
                                     text: "Add an appearance",
                                     visuallyHiddenText: "Add an appearance"
                                 }]
@@ -72,12 +67,14 @@
                         },
                         rows: [
                         {
-                            key: { text: "Appearances" },
-                            value: { html: appearanceTableHtml }
+                            key: { text: "", classes: 'govuk-!-display-none' },
+                            value: { html: courtCaseSummary }
                         }]
                     })
                 }}
+
             {% endfor %}
+
         </div>
 
         <div class="govuk-grid-column-one-third">
