--- a/server/views/components/offenceCard/template.njk
+++ b/server/views/components/offenceCard/template.njk
@@ -23,7 +23,10 @@
                     text: params.outcome
                 }
                 }
-            ]
+            ],
+            attributes: {
+                "data-qa": "offenceSummaryList"
+            }
             }) 
         }}
     </div>
