--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -14,4 +14,6 @@ $govuk-page-width: $moj-page-width;
 @import './components/offence-card';
 @import './components/offence-summary';
 @import './components/footer';
+@import './components/content-top';
+@import './components/action-list';
 @import 'assets/scss/local';
